# sdl_lib

./: .gitignore  CMakeLists.txt  README.md  audio.c  audio.h  engine.c  engine.h  graphics.c  graphics.h  gui.c  gui.h  input.c  input.h  input_system.h  main.c  maths.c  maths.h  physics.c  physics.h  pong.c  time.c  time.h  todo.txt  video.c  video.h
engine/: audio.c  audio.h  defines.h  engine.c  engine.h  graphics.c  graphics.h  gui.c  gui.h  input.c  input.h  maths.c  maths.h  physics.c  physics.h  time.h  todo.txt  video.c  video.h
include/: stb_image.h  stb_truetype.h
